cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_18875_PCoIP-UR4-PF-CFT.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Template to deploy a NVIDIA enabled EC2 instance from AWS Marketplace AMI that has Teradici PCoIP Ultra software installed with Unreal 4 pre-installed. Build also includes Perforce client software. AWS Instance is billed hourly.
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "Network Configuration"
        Parameters:
          - VpcId
          - SubnetId
      -
        Label:
          default: "Amazon EC2 Configuration"
        Parameters:
          - InstanceType
          - KeyName
      -
        Label:
          default: "Security Group Configuration"
        Parameters:
          - RDPLocation
Parameters:
  VpcId:
    Type: 'AWS::EC2::VPC::Id'
    Description: VPC which the Security Group will be created in.
  SubnetId:
    Type: 'AWS::EC2::Subnet::Id'
    Description: Subnet in which to launch an instance in.
  InstanceType:
    Type: String
    Description: Select a NVIDIA GPU enabled instance for your workload.
    Default: g4dn.2xlarge
    AllowedValues:
      - g4dn.xlarge
      - g4dn.2xlarge
      - g4dn.4xlarge
      - g4dn.8xlarge
      - g4dn.16xlarge
      - g5.xlarge
      - g5.2xlarge
      - g5.4xlarge
      - g5.8xlarge
      - g5.16xlarge
      - g3s.xlarge
      - g3s.2xlargee
      - g3s.4xlarge
      - g3s.8xlarge
      - g3s.16xlarge
    ConstraintDescription: must be a valid EC2 NVIDIA instance type.
  KeyName:
    Description: SSH Keypair to login to the instance
    Type: AWS::EC2::KeyPair::KeyName
  RDPLocation:
    Description: The IP address that can RDP to instances. Use 'What is my IP' to get your public IP then add /32 to end of IP.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Mappings:
  RegionMap:
    af-south-1:
      AMI: ami-08757693c6234d857
    ap-east-1:
      AMI: ami-08757693c6234d857
    ap-northeast-1:
      AMI: ami-025b041cb82374362
    ap-northeast-2:
      AMI: ami-0f5d143f1716a7e4c
    ap-northeast-3:
      AMI: ami-0d53e1f87a9618ddf
    ap-south-1:
      AMI: ami-0b9ea2245cf6a7835
    ap-southeast-1:
      AMI: ami-060a836af001936be
    ap-southeast-2:
      AMI: ami-0b51ffc21f7fa6fd2
    ca-central-1:
      AMI: NOT_SUPPORTED
    eu-central-1:
      AMI: NOT_SUPPORTED
    eu-north-1:
      AMI: ami-09f8e47293a38df4e
    eu-south-1:
      AMI: ami-00323e574ed841a66
    eu-west-1:
      AMI: ami-058e75b05ef99eea3
    eu-west-2:
      AMI: ami-064fd957434ec58a8
    eu-west-3:
      AMI: ami-09ab4651f22187c4f
    me-south-1:
      AMI: ami-0f937aeba3e34f685
    sa-east-1:
      AMI:  ami-09aa7a60a3f659228
    us-east-1:
      AMI: ami-0487c93dba030059e
    us-east-2:
      AMI: ami-0ac3b44705605381a
    us-west-1:
      AMI: ami-0e7705ded093ff371
    us-west-2:
      AMI: ami-064fd957434ec58a8
Resources:
  PCoIPGFXInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: !FindInMap
        - RegionMap
        - !Ref 'AWS::Region'
        - AMI
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref PCoIPSecurityGroup
      SubnetId: !Ref SubnetId
      Tags:
         - Key: Name
           Value: 'PCoIP-UR4-GFX-Instance'
      UserData:
         Fn::Base64:
            !Sub |
                  <powershell>
                  $ErrorActionPreference="Stop"
                  # Set the location to the registry for PCoIP Setting
                  Set-Location -Path 'HKLM:\SOFTWARE\Policies\Teradici\PCoIP\pcoip_admin'
                  # Create new reg files for PCoIP Ultra
                  New-ItemProperty -Path 'HKLM:\SOFTWARE\Policies\Teradici\PCoIP\pcoip_admin' -Name 'pcoip.event_filter_mode' -Value "00000003" -PropertyType dword -Force
                  New-ItemProperty -Path 'HKLM:\SOFTWARE\Policies\Teradici\PCoIP\pcoip_admin' -Name 'pcoip.ultra' -Value "00000003" -PropertyType dword -Force
                  New-ItemProperty -Path 'HKLM:\SOFTWARE\Policies\Teradici\PCoIP\pcoip_admin' -Name 'pcoip.ultra_offload_mpps' -Value "00000010" -PropertyType dword -Force
                  # Get out of the Registry
                  Pop-Location
                  # remove unneeded desktop shortcuts
                  Remove-Item "C:\Users\Public\Desktop\Teradici PCoIP Clients.url"
                  Remove-Item "C:\Users\Public\Desktop\Teradici Website.url"
                  Remove-Item "C:\Users\Administrator\Desktop\EC2 Feedback.website"
                  Remove-Item "C:\Users\Administrator\Desktop\EC2 Microsoft Windows Guide.website"
                  # Install Choco
                  Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
                  # enable unattended installs
                  choco feature enable -n allowGlobalConfirmation
                  # Install appliactions
                  choco install googlechrome
                  choco install p4v
                  choco install jetbrains-rider
                  choco install git
                  choco install 7zip
                  choco install notepadplus
                  choco install visualstudio2017community
                  # add desktop shortcuts
                  $SourceFileLocation = "C:\Program Files\Perforce\p4v.exe"
                  $ShortcutLocation = "C:\Users\Public\Desktop\P4V.lnk"
                  $WScriptShell = New-Object -ComObject WScript.Shell
                  $Shortcut = $WScriptShell.CreateShortcut($ShortcutLocation)
                  $Shortcut.TargetPath = $SourceFileLocation
                  $Shortcut.Save()
                  Start-Sleep -Seconds 3
                  $SourceFileLocation = "C:\Program Files\Perforce\p4admin.exe"
                  $ShortcutLocation = "C:\Users\Public\Desktop\P4Admin.lnk"
                  $WScriptShell = New-Object -ComObject WScript.Shell
                  $Shortcut = $WScriptShell.CreateShortcut($ShortcutLocation)
                  $Shortcut.TargetPath = $SourceFileLocation
                  $Shortcut.Save()
                  Start-Sleep -Seconds 3
                  $SourceFileLocation = "C:\Program Files\Perforce\p4merge.exe"
                  $ShortcutLocation = "C:\Users\Public\Desktop\P4Merge.lnk"
                  $WScriptShell = New-Object -ComObject WScript.Shell
                  $Shortcut = $WScriptShell.CreateShortcut($ShortcutLocation)
                  $Shortcut.TargetPath = $SourceFileLocation
                  $Shortcut.Save()
                  Start-Sleep -Seconds 3
                  </powershell>
  PCoIPSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: SG to allow communications for PCoIP Protocol
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3389'
          ToPort: '3389'
          CidrIp: !Ref RDPLocation
          Description: 'Allow RDP traffic for PCoIP patches and troubleshooting'
        - IpProtocol: tcp
          FromPort: '4172'
          ToPort: '4172'
          CidrIp: '0.0.0.0/0'
          Description: 'Allow encrypted PCoIP pixel traffic'
        - IpProtocol: udp
          FromPort: '4172'
          ToPort: '4172'
          CidrIp: '0.0.0.0/0'
          Description: 'Allow encrypted PCoIP pixel traffic'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: '0.0.0.0/0'
          Description: 'Allow PCoIP session establishment authentication'
        - IpProtocol: tcp
          FromPort: '60443'
          ToPort: '60443'
          CidrIp: '0.0.0.0/0'
          Description: 'Alternative Port for PCoIP session establishment authentication'
        - IpProtocol: udp
          FromPort: '64172'
          ToPort: '64172'
          CidrIp: '0.0.0.0/0'
          Description: 'Allow PCoIP collaboration sessions'
      Tags:
        - Key: Name
          Value: PCoIP-SG
Outputs:
  PCoIPGFXInstanceId:
    Description: PCoIP GFX instance id
    Value: !Ref PCoIPGFXInstance
  PrivateIP:
    Description: Private IP address of instance
    Value: !GetAtt
      - PCoIPGFXInstance
      - PrivateIp
  PublicIP:
    Description: Public IP address of instance
    Value: !GetAtt
      - PCoIPGFXInstance
      - PublicIp
